# recipe-scraper

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
producer/: Dockerfile  db.py  main.py  models.py  pyproject.toml  scraper.py
src/: constants.py  core.py  db.py  domain_models.py  errors.py  main.py  models.py  scraper.py  utils.py
worker/: Dockerfile  pyproject.toml
worker/src/: constants.py  core.py  db.py  domain_models.py  main.py  models.py  scraper.py  utils.py
worker/tests/: test_constants.py  test_domain_models.py  test_errors.py
