[project]
name = "recipe-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Anthony Buchholz",email = "anthony.buchholz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "recipe-scrapers (>=15.11.0,<16.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "azure-identity (>=1.25.1,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
