[project]
name = "producer"
version = "0.1.0"
description = ""
authors = [{ name = "Anthony Buchholz" }]
requires-python = "<4.0,>=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx (>=0.28.1,<0.29.0)",
  "tenacity (>=9.1.2,<10.0.0)",
  "pre-commit (>=4.5.1,<5.0.0)",
  "pika (>=1.3.2,<2.0.0)",
  "lxml (>=6.0.2,<7.0.0)",
  "aio-pika (>=9.5.8,<10.0.0)",
]

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
]
