[project]
name = "producer"
version = "0.1.0"
description = ""
authors = [{ name = "Anthony Buchholz" }]
requires-python = "<4.0,>=3.14"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "httpx (>=0.28.1,<0.29.0)",
  "tenacity (>=9.1.4,<10.0.0)",
  "pre-commit (>=4.6.0,<5.0.0)",
  "pika (>=1.4.1,<2.0.0)",
  "lxml (>=6.1.1,<7.0.0)",
  "aio-pika (>=10.0.1,<11.0.0)",
  "sqlmodel>=0.0.39",
  "psycopg2-binary>=2.9.12",
]

[tool.uv.scripts]
lint = "ruff check ."
fmt = "ruff format ."
fmt-check = "ruff format --check ."

[tool.uv]
package = false

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 130
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[dependency-groups]
dev = [
    "debugpy>=1.8.21",
    "ruff>=0.15.21",
]
