[project]
name = "recipe-scraper-worker"
version = "0.1.0"
description = ""
authors = [{ name = "Anthony Buchholz", email = "anthony.buchholz@gmail.com" }]
requires-python = "<4.0,>=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "recipe-scrapers (>=15.11.0,<16.0.0)",
    "sqlmodel (>=0.0.27,<0.0.40)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "azure-identity (>=1.25.1,<2.0.0)",
    "tenacity (>=9.1.2,<10.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "aio-pika (>=9.5.8,<11.0.0)",
    "anyio>=4.12.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false

[tool.uv.scripts]
lint = "ruff check src/"
fmt = "ruff format src/"
fmt-check = "ruff format --check src/"
test = "pytest tests/ -v"

[build-system]
requires = ["uv_build>=0.10.2,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 130
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
